Update blog/_posts/2012-09-04-java-global-try-catch.md